# 2509011061_P2P3

./: .editorconfig  .env.example  .flake8  .gitignore  BILETIX_FIX.md  BILETIX_SUCCESS.md  CLEANUP_SUMMARY.md  COMMANDS.md  Dockerfile  Makefile  PHASE1_SUMMARY.txt  QUICKSTART.md  README.md  ROADMAP.md  SDD.md  SUCCESS.md  ULTRA_CLEANUP_COMPLETE.md  USAGE_GUIDE.md  WORKING_STATUS.md  ask.py  biletinial_full_log.txt  biletinial_page_content.html  biletix_page.html  check_descriptions.py  concerts_after_select.html  concerts_page_debug.html  debug_categories.py  debug_log.txt  debug_price.py  diagnose_biletix.py  docker-compose.yml  pyproject.toml  pytest.ini  quick_check.py  requirements-dev.txt  requirements.txt  save_html.py  scraped_websites.md  scrapy.cfg  scrapy_page_content.html  (+8 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: __init__.py  logging_config.py  settings.py
docs/: EventContent_Architecture.md  PHASE1_COMPLETION.md  cost.md  scraped_websites.md  slides_visual_design.md
examples/: event_content_usage.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  ProgressPage.jsx  index.css  main.jsx
src/: __init__.py  main.py
src/ai/: __init__.py  assistant.py  enrichment.py  gemini_client.py  ollama_client.py  schemas.py  tournament.py
src/analysis/: __init__.py  anomaly_detector.py  scientific_report.py  statistics.py
src/api/: main.py
src/database/: __init__.py  connection.py
src/gui/: __init__.py  dashboard.py
src/models/: __init__.py  ai_summary.py  base.py  collection.py  event.py  event_content.py  person.py  protocols.py  venue.py
src/scrapers/: items.py  middlewares.py  pipelines.py  settings.py
src/scripts/: audit_ai_quality.py  clean_ai.py  clean_collections.py  create_vector_index.py  debug_db_descriptions.py  enrich_entities.py  enrich_events.py  enrich_venues.py  link_events.py  run_analysis.py  run_tournaments.py  show_missing_prices.py  update_embeddings_only.py  verify_data.py  verify_venue_enrichment.py  view_events.py  wipe_db.py
src/services/: entity_extractor.py  linker.py  venue_enricher.py
src/utils/: __init__.py  date_parser.py
tests/: __init__.py  conftest.py  test_ai_summary.py
(+17 files in other folders)
